--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random"
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,33 +35,41 @@
     }
    ],
    "source": [
-    "# 加载数据\n",
-    "columns = [\n",
-    "    'age', 'workclass', 'fnlwgt', 'education', 'educationNum', \n",
-    "    'maritalStatus', 'occupation', 'relationship', 'race', 'sex',\n",
-    "    'capitalGain', 'capitalLoss', 'hoursPerWeek', 'nativeCountry', 'income'\n",
-    "]\n",
-    "train_data = pd.read_csv('data/adult.data', names=columns)\n",
-    "test_data = pd.read_csv('data/adult.test', names=columns, skiprows=1)\n",
+    "columns = ['age', 'workclass', 'fnlwgt', 'education', 'educationNum', \n",
+    "           'maritalStatus', 'occupation', 'relationship', 'race', 'sex',\n",
+    "           'capitalGain', 'capitalLoss', 'hoursPerWeek', 'nativeCountry', 'income']\n",
+    "continues_columns = ['age', 'fnlwgt', 'educationNum', 'capitalGain', 'capitalLoss', 'hoursPerWeek']\n",
+    "discrete_columns = [_ for _ in columns if _ not in continues_columns]\n",
     "\n",
-    "train_data.to_csv(\"data/train.csv\", index=False)\n",
-    "test_data.to_csv(\"data/test.csv\", index=False)\n",
     "\n",
-    "train_data = pd.read_csv('data/train.csv').astype(str)\n",
-    "test_data = pd.read_csv('data/test.csv').astype(str)\n",
+    "train_data = pd.read_csv('data/adult.data', delimiter=', ', header=None, engine='python')\n",
+    "test_data = pd.read_csv('data/adult.test', delimiter=', ', header=None, skiprows=1, engine='python')\n",
+    "train_data.columns = columns\n",
+    "test_data.columns = columns\n",
     "\n",
+    "\n",
+    "# 离散数据：按列编码为float类型\n",
+    "LE = LabelEncoder()\n",
+    "for i in range(len(columns)):\n",
+    "    if columns[i] in continues_columns: continue\n",
+    "    train_data[columns[i]] = LE.fit_transform(train_data[columns[i]]).astype(float)\n",
+    "    test_data[columns[i]] = LE.fit_transform(test_data[columns[i]]).astype(float)\n",
+    "\n",
+    "\n",
+    "X_train = train_data.iloc[:, :-1]\n",
+    "y_train = train_data.iloc[:, -1]\n",
+    "X_test = test_data.iloc[:, :-1]\n",
+    "y_test = test_data.iloc[:, -1]\n",
+    "\n",
+    "\n",
+    "# 清洗数据：删除有缺失值的样本\n",
     "origin_train_shape = train_data.shape\n",
     "origin_test_shape = test_data.shape\n",
-    "\n",
-    "\n",
-    "# 清洗数据\n",
     "for column in columns:\n",
     "    train_data = train_data[~train_data[column].str.contains('\\?', regex=True)]\n",
     "    test_data = test_data[~test_data[column].str.contains('\\?', regex=True)]\n",
-    "\n",
     "after_train_shape = train_data.shape\n",
     "after_test_shape = test_data.shape\n",
-    "\n",
     "print(f\"Train data shape: {origin_train_shape} -> {after_train_shape} \\\n",
     "      delta: {(origin_train_shape[0] - after_train_shape[0]) / origin_train_shape[0] * 100:.2f}%\")\n",
     "print(f\"Test data shape : {origin_test_shape} -> {after_test_shape} \\\n",
@@ -82,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +238,70 @@
     "flags = [0 for _ in range(len(columns))]\n",
     "cart = build_decision_tree(train_data_copy, columns, flags)\n",
     "save_decision_tree(cart)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.x 使用 sk-learn 包"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "准确率：0.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn import tree\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns = ['age', 'workclass', 'fnlwgt', 'education', 'educationNum', \n",
+    "           'maritalStatus', 'occupation', 'relationship', 'race', 'sex',\n",
+    "           'capitalGain', 'capitalLoss', 'hoursPerWeek', 'nativeCountry', 'income']\n",
+    "continues_columns = ['age', 'fnlwgt', 'educationNum', 'capitalGain', 'capitalLoss', 'hoursPerWeek']\n",
+    "discrete_columns = [_ for _ in columns if _ not in continues_columns]\n",
+    "\n",
+    "\n",
+    "train_data = pd.read_csv('data/adult.data', delimiter=', ', header=None, engine='python')\n",
+    "test_data = pd.read_csv('data/adult.test', delimiter=', ', header=None, skiprows=1, engine='python')\n",
+    "train_data.columns = columns\n",
+    "test_data.columns = columns\n",
+    "\n",
+    "\n",
+    "# 离散数据：按列编码为float类型\n",
+    "LE = LabelEncoder()\n",
+    "for i in range(len(columns)):\n",
+    "    if columns[i] in continues_columns: continue\n",
+    "    train_data[columns[i]] = LE.fit_transform(train_data[columns[i]]).astype(float)\n",
+    "    test_data[columns[i]] = LE.fit_transform(test_data[columns[i]]).astype(float)\n",
+    "\n",
+    "\n",
+    "X_train = train_data.iloc[:, :-1]\n",
+    "y_train = train_data.iloc[:, -1]\n",
+    "X_test = test_data.iloc[:, :-1]\n",
+    "y_test = test_data.iloc[:, -1]\n",
+    "\n",
+    "\n",
+    "clf = DecisionTreeClassifier(criterion=\"entropy\")\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'准确率：{accuracy:.2f}')\n",
+    "\n",
+    "# tree.plot_tree(clf, filled=True)"
    ]
   },
   {
@@ -296,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +378,7 @@
      "output_type": "stream",
      "text": [
       "Train accuracy:  0.7510775147536636\n",
-      "Test accuracy :  0.49721115537848604\n"
+      "Test accuracy :  0.50199203187251\n"
      ]
     }
    ],
