--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn import tree\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -22,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data shape: (32561, 15) -> (30162, 15)       delta: 7.37%\n",
-      "Test data shape : (16281, 15) -> (15060, 15)       delta: 7.50%\n"
+      "清洗前的数据规模：训练集 -> (32561, 15) 测试集 -> (16281, 15)\n",
+      "清洗后的数据规模：训练集 -> (30162, 15) 测试集 -> (15060, 15)\n"
      ]
     }
    ],
@@ -42,10 +45,19 @@
     "discrete_columns = [_ for _ in columns if _ not in continues_columns]\n",
     "\n",
     "\n",
+    "# 读取数据\n",
     "train_data = pd.read_csv('data/adult.data', delimiter=', ', header=None, engine='python')\n",
     "test_data = pd.read_csv('data/adult.test', delimiter=', ', header=None, skiprows=1, engine='python')\n",
     "train_data.columns = columns\n",
     "test_data.columns = columns\n",
+    "\n",
+    "\n",
+    "# 清洗数据：删除含有缺失值的样本\n",
+    "print(f\"清洗前的数据规模：训练集 -> {train_data.shape} 测试集 -> {test_data.shape}\")\n",
+    "for column in columns:\n",
+    "    train_data = train_data[~train_data[column].astype(str).str.contains('\\?')]\n",
+    "    test_data = test_data[~test_data[column].astype(str).str.contains('\\?')]\n",
+    "print(f\"清洗后的数据规模：训练集 -> {train_data.shape} 测试集 -> {test_data.shape}\")\n",
     "\n",
     "\n",
     "# 离散数据：按列编码为float类型\n",
@@ -56,43 +68,31 @@
     "    test_data[columns[i]] = LE.fit_transform(test_data[columns[i]]).astype(float)\n",
     "\n",
     "\n",
+    "# 连续数据：离散化为分位数区间的中值\n",
+    "for column in continues_columns:\n",
+    "    train_qcut = pd.qcut(train_data[column].astype(float), 5, duplicates='drop')\n",
+    "    train_data[column] = train_qcut.apply(lambda x: x.mid)\n",
+    "    test_qcut = pd.qcut(test_data[column].astype(float), 5, duplicates='drop')\n",
+    "    test_data[column] = test_qcut.apply(lambda x: x.mid)\n",
+    "\n",
+    "\n",
+    "# 划分数据集\n",
     "X_train = train_data.iloc[:, :-1]\n",
     "y_train = train_data.iloc[:, -1]\n",
     "X_test = test_data.iloc[:, :-1]\n",
-    "y_test = test_data.iloc[:, -1]\n",
-    "\n",
-    "\n",
-    "# 清洗数据：删除有缺失值的样本\n",
-    "origin_train_shape = train_data.shape\n",
-    "origin_test_shape = test_data.shape\n",
-    "for column in columns:\n",
-    "    train_data = train_data[~train_data[column].str.contains('\\?', regex=True)]\n",
-    "    test_data = test_data[~test_data[column].str.contains('\\?', regex=True)]\n",
-    "after_train_shape = train_data.shape\n",
-    "after_test_shape = test_data.shape\n",
-    "print(f\"Train data shape: {origin_train_shape} -> {after_train_shape} \\\n",
-    "      delta: {(origin_train_shape[0] - after_train_shape[0]) / origin_train_shape[0] * 100:.2f}%\")\n",
-    "print(f\"Test data shape : {origin_test_shape} -> {after_test_shape} \\\n",
-    "      delta: {(origin_test_shape[0] - after_test_shape[0]) / origin_test_shape[0] * 100:.2f}%\")\n",
-    "\n",
-    "\n",
-    "# 连续型数据离散化\n",
-    "continues_columns = ['age', 'fnlwgt', 'educationNum', 'capitalGain', 'capitalLoss', 'hoursPerWeek']\n",
-    "for column in continues_columns:\n",
-    "    train_data[column] = pd.qcut(train_data[column].astype(float), 10, duplicates='drop')\n",
-    "    test_data[column] = pd.qcut(test_data[column].astype(float), 10, duplicates='drop')"
+    "y_test = test_data.iloc[:, -1]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 二、模型训练"
+    "## 二、自定义决策树模型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,76 +244,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.x 使用 sk-learn 包"
+    "## 三、多模型对照测试"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "准确率：0.81\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn import tree\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "columns = ['age', 'workclass', 'fnlwgt', 'education', 'educationNum', \n",
-    "           'maritalStatus', 'occupation', 'relationship', 'race', 'sex',\n",
-    "           'capitalGain', 'capitalLoss', 'hoursPerWeek', 'nativeCountry', 'income']\n",
-    "continues_columns = ['age', 'fnlwgt', 'educationNum', 'capitalGain', 'capitalLoss', 'hoursPerWeek']\n",
-    "discrete_columns = [_ for _ in columns if _ not in continues_columns]\n",
-    "\n",
-    "\n",
-    "train_data = pd.read_csv('data/adult.data', delimiter=', ', header=None, engine='python')\n",
-    "test_data = pd.read_csv('data/adult.test', delimiter=', ', header=None, skiprows=1, engine='python')\n",
-    "train_data.columns = columns\n",
-    "test_data.columns = columns\n",
-    "\n",
-    "\n",
-    "# 离散数据：按列编码为float类型\n",
-    "LE = LabelEncoder()\n",
-    "for i in range(len(columns)):\n",
-    "    if columns[i] in continues_columns: continue\n",
-    "    train_data[columns[i]] = LE.fit_transform(train_data[columns[i]]).astype(float)\n",
-    "    test_data[columns[i]] = LE.fit_transform(test_data[columns[i]]).astype(float)\n",
-    "\n",
-    "\n",
-    "X_train = train_data.iloc[:, :-1]\n",
-    "y_train = train_data.iloc[:, -1]\n",
-    "X_test = test_data.iloc[:, :-1]\n",
-    "y_test = test_data.iloc[:, -1]\n",
-    "\n",
-    "\n",
-    "clf = DecisionTreeClassifier(criterion=\"entropy\")\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_pred = clf.predict(X_test)\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f'准确率：{accuracy:.2f}')\n",
-    "\n",
-    "# tree.plot_tree(clf, filled=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 三、模型测试"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +314,7 @@
      "output_type": "stream",
      "text": [
       "Train accuracy:  0.7510775147536636\n",
-      "Test accuracy :  0.50199203187251\n"
+      "Test accuracy :  0.49296148738379814\n"
      ]
     }
    ],
@@ -394,6 +330,88 @@
     "test_list = [0 if i == '<=50K' else 1 for i in test_data['income'].to_numpy()]\n",
     "acc_test = calc_acc(pred_test_list, test_list)\n",
     "print(\"Test accuracy : \", acc_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 使用 entropy 作为划分标准"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_std = DecisionTreeClassifier(criterion='entropy')\n",
+    "clf_std.fit(X_train, y_train)\n",
+    "y_pred_std = clf_std.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred_std)\n",
+    "print(f'标准包准确率：{accuracy:.2f}')\n",
+    "\n",
+    "clf_my = MyDecisionTreeClassifier(criterion='entropy')\n",
+    "clf_my.fit(X_train, y_train)\n",
+    "y_pred_my = clf_my.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred_my)\n",
+    "print(f'自实现准确率：{accuracy:.2f}')\n",
+    "\n",
+    "# tree.plot_tree(clf, filled=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 使用 gini 作为划分标准"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_std = DecisionTreeClassifier(criterion='gini')\n",
+    "clf_std.fit(X_train, y_train)\n",
+    "y_pred_std = clf_std.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred_std)\n",
+    "print(f'标准包准确率：{accuracy:.2f}')\n",
+    "\n",
+    "\n",
+    "clf_my = MyDecisionTreeClassifier(criterion='gini')\n",
+    "clf_my.fit(X_train, y_train)\n",
+    "y_pred_my = clf_my.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred_my)\n",
+    "print(f'自实现准确率：{accuracy:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 使用 log_loss 作为划分标准"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_std = DecisionTreeClassifier(criterion='log_loss')\n",
+    "clf_std.fit(X_train, y_train)\n",
+    "y_pred_std = clf_std.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred_std)\n",
+    "print(f'标准包准确率：{accuracy:.2f}')\n",
+    "\n",
+    "\n",
+    "clf_my = MyDecisionTreeClassifier(criterion='log_loss')\n",
+    "clf_my.fit(X_train, y_train)\n",
+    "y_pred_my = clf_my.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred_my)\n",
+    "print(f'自实现准确率：{accuracy:.2f}')"
    ]
   }
  ],
