--- a/main.ipynb
+++ b/main.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,9 +215,10 @@
     "    \n",
     "\n",
     "    def _gini_gain(self, y: pd.Series, subsets: dict) -> float:\n",
-    "        # 计算基尼指数\n",
-    "        # 请根据您的需求自行实现\n",
-    "        pass\n",
+    "        gini_index = 0\n",
+    "        for subset in subsets.values():\n",
+    "            gini_index += len(subset) / len(y) * (1 - np.sum([(len(subset.loc[subset == label]) / len(subset)) ** 2 for label in subset.unique()]))\n",
+    "        return -gini_index\n",
     "\n",
     "\n",
     "    def predict(self, X_test) -> np.array:\n",
@@ -338,9 +339,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "标准包准确率：0.78\n",
+      "自实现准确率：0.75\n"
+     ]
+    }
+   ],
    "source": [
     "clf_std = DecisionTreeClassifier(criterion='gini')\n",
     "clf_std.fit(X_train, y_train)\n",
