--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "int64 object int64 object int64 object object object object object int64 int64 int64 object object \n",
       "清洗前的数据规模：训练集 -> (32561, 15) 测试集 -> (16281, 15)\n",
-      "清洗后的数据规模：训练集 -> (30162, 15) 测试集 -> (15060, 15)\n"
+      "清洗后的数据规模：训练集 -> (30162, 15) 测试集 -> (15060, 15)\n",
+      "int64 object int64 object int64 object object object object object int64 int64 int64 object object \n",
+      "int64 float64 int64 float64 int64 float64 float64 float64 float64 float64 int64 int64 int64 float64 float64 \n",
+      "category float64 category float64 category float64 float64 float64 float64 float64 category category category float64 float64 \n",
+      "    age  workclass       fnlwgt  education educationNum  maritalStatus  \\\n",
+      "0  37.0        5.0   60014.5995        9.0      11.5000            4.0   \n",
+      "1  45.5        4.0   60014.5995        9.0      11.5000            2.0   \n",
+      "2  37.0        2.0  228330.2000       11.0       4.9995            0.0   \n",
+      "3  70.0        2.0  228330.2000        1.0       4.9995            2.0   \n",
+      "4  29.5        2.0  872511.1000        9.0      11.5000            2.0   \n",
+      "\n",
+      "   occupation  relationship  race  sex capitalGain capitalLoss hoursPerWeek  \\\n",
+      "0         0.0           1.0   4.0  1.0  49999.4995   2177.9995      38.0000   \n",
+      "1         3.0           0.0   4.0  1.0  49999.4995   2177.9995      18.4995   \n",
+      "2         5.0           1.0   4.0  1.0  49999.4995   2177.9995      38.0000   \n",
+      "3         5.0           0.0   2.0  1.0  49999.4995   2177.9995      38.0000   \n",
+      "4         9.0           5.0   2.0  0.0  49999.4995   2177.9995      38.0000   \n",
+      "\n",
+      "   nativeCountry  income  \n",
+      "0           38.0     0.0  \n",
+      "1           38.0     0.0  \n",
+      "2           38.0     0.0  \n",
+      "3           38.0     0.0  \n",
+      "4            4.0     0.0  \n"
      ]
     }
    ],
@@ -52,12 +76,20 @@
     "test_data.columns = columns\n",
     "\n",
     "\n",
+    "for col in columns: print(train_data[col].dtype, end=' ')\n",
+    "print()\n",
+    "\n",
+    "\n",
     "# 清洗数据：删除含有缺失值的样本\n",
     "print(f\"清洗前的数据规模：训练集 -> {train_data.shape} 测试集 -> {test_data.shape}\")\n",
     "for column in columns:\n",
     "    train_data = train_data[~train_data[column].astype(str).str.contains('\\?')]\n",
     "    test_data = test_data[~test_data[column].astype(str).str.contains('\\?')]\n",
     "print(f\"清洗后的数据规模：训练集 -> {train_data.shape} 测试集 -> {test_data.shape}\")\n",
+    "\n",
+    "\n",
+    "for col in columns: print(train_data[col].dtype, end=' ')\n",
+    "print()\n",
     "\n",
     "\n",
     "# 离散数据：按列编码为float类型\n",
@@ -68,12 +100,23 @@
     "    test_data[columns[i]] = LE.fit_transform(test_data[columns[i]]).astype(float)\n",
     "\n",
     "\n",
+    "for col in columns: print(train_data[col].dtype, end=' ')\n",
+    "print()\n",
+    "\n",
+    "\n",
     "# 连续数据：离散化为分位数区间的中值\n",
     "for column in continues_columns:\n",
     "    train_qcut = pd.qcut(train_data[column].astype(float), 5, duplicates='drop')\n",
     "    train_data[column] = train_qcut.apply(lambda x: x.mid)\n",
     "    test_qcut = pd.qcut(test_data[column].astype(float), 5, duplicates='drop')\n",
     "    test_data[column] = test_qcut.apply(lambda x: x.mid)\n",
+    "\n",
+    "\n",
+    "for col in columns: print(train_data[col].dtype, end=' ')\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "print(train_data.head())\n",
     "\n",
     "\n",
     "# 划分数据集\n",
@@ -92,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
