--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,59 +148,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MyDecisionTreeClassifier:\n",
     "    def __init__(self, criterion='entropy'):\n",
     "        self.criterion = criterion\n",
-    "        self.tree = None\n",
+    "        self.root = None\n",
     "\n",
     "\n",
-    "    def fit(self, X_train, y_train):\n",
-    "        self.tree = self._build_tree(X_train, y_train)\n",
+    "    def fit(self, X_train: pd.DataFrame, y_train: pd.Series) -> None:\n",
+    "        self.root = self._build_tree(X_train, y_train)\n",
     "\n",
     "\n",
-    "    def _build_tree(self, X: pd.DataFrame, y: pd.Series):\n",
-    "        # 如果数据集为空，返回 None\n",
-    "        if len(y) == 0:\n",
-    "            return None\n",
+    "    def _build_tree(self, X: pd.DataFrame, y: pd.Series) -> Node:\n",
+    "        if len(y) == 0: return None\n",
+    "        if len(set(y)) == 1: return Node(label=y.iloc[0])\n",
     "\n",
-    "        # 如果标签相同，返回叶子结点\n",
-    "        if len(set(y)) == 1:\n",
-    "            return Node(label=y.iloc[0])\n",
-    "\n",
-    "        # 选择最佳划分属性\n",
     "        best_attribute, best_gain = self._choose_best_attribute(X, y)\n",
     "\n",
-    "        # 如果没有合适的划分，返回叶子结点\n",
-    "        if best_gain == 0:\n",
-    "            return Node(label=Counter(y).most_common(1)[0][0])\n",
+    "        if best_gain == 0: return Node(label=Counter(y).most_common(1)[0][0])\n",
     "\n",
-    "        # 构建叶子结点\n",
+    "        # 递归构建子结点\n",
     "        children = {}\n",
     "        for value in X[best_attribute].unique():\n",
-    "            # 根据属性值划分数据集\n",
     "            value_indices = (X[best_attribute] == value)\n",
     "            X_subset = X.loc[value_indices]\n",
     "            y_subset = y.loc[value_indices]\n",
     "\n",
-    "            # 递归构建叶子结点\n",
     "            child_node = self._build_tree(X_subset, y_subset)\n",
     "            children[value] = child_node\n",
     "\n",
-    "        # 返回内叶子结点\n",
     "        return Node(attribute=best_attribute, children=children)\n",
     "\n",
     "\n",
-    "    def _choose_best_attribute(self, X, y):\n",
+    "    def _choose_best_attribute(self, X: pd.DataFrame, y: pd.Series) -> tuple:\n",
     "        best_gain = 0\n",
     "        best_attribute = None\n",
     "\n",
-    "        # 遍历所有特征\n",
     "        for attribute in X.columns:\n",
-    "            # 获取当前特征的唯一值\n",
     "            values = X[attribute].unique()\n",
     "\n",
     "            # 划分数据集\n",
@@ -263,17 +250,17 @@
     "        return -gini_index\n",
     "\n",
     "\n",
-    "    def predict(self, X_test) -> np.array:\n",
+    "    def predict(self, X_test: pd.DataFrame) -> np.ndarray:\n",
     "        y_pred = [self._predict_single_sample(sample) for _, sample in X_test.iterrows()]\n",
     "        return np.array(y_pred)\n",
     "\n",
     "\n",
     "    def _predict_single_sample(self, sample):\n",
-    "        node = self.tree\n",
+    "        node = self.root\n",
     "        while node.label is None:\n",
     "            value = sample[node.attribute]\n",
     "\n",
-    "            # 如果叶子结点为空，返回子结点中最多的标签\n",
+    "            # 如果叶子结点为空，返回当前结点中最多的标签\n",
     "            if value not in node.children or node.children[value] is None:\n",
     "                child_labels = []\n",
     "\n",
@@ -308,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
